--- a/parquet-hadoop/pom.xml
+++ b/parquet-hadoop/pom.xml
@@ -3,7 +3,7 @@
     <groupId>com.twitter</groupId>
     <artifactId>parquet</artifactId>
     <relativePath>../pom.xml</relativePath>
-    <version>1.5.0</version>
+    <version>1.5.0-qds-0.20.1</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -30,7 +30,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
+      <artifactId>hadoop-core</artifactId>
       <version>${hadoop.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -68,6 +68,17 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-snappy</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+      <dependency>
+          <groupId>com.hadoop.gplcompression</groupId>
+          <artifactId>hadoop-lzo</artifactId>
+          <version>0.4.19</version>
+      </dependency>
+
   </dependencies>
 
   <build>
