--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.twitter</groupId>
   <artifactId>parquet</artifactId>
-  <version>1.5.0</version>
+  <version>1.5.0-qds-0.20.1</version>
   <packaging>pom</packaging>
 
   <name>Parquet MR</name>
@@ -62,6 +62,30 @@
         <enabled>true</enabled>
       </snapshots>
      </repository>
+     <repository>
+       <id>qubole-http-release</id>
+       <name>Qubole HTTP Release Repository</name>
+       <url>http://maven-qubole.s3-website-us-east-1.amazonaws.com/maven/release</url>
+     </repository>
+     <repository>
+       <id>qubole-http-snapshot</id>
+       <name>Qubole HTTP Snapshot Repository</name>
+       <url>http://maven-qubole.s3-website-us-east-1.amazonaws.com/maven/snapshot</url>
+       <snapshots>
+         <enabled>true</enabled>
+       </snapshots>
+     </repository>
+      <repository>
+          <id>qubole-releases</id>
+          <name>Qubole Releases</name>
+          <url>http://karma.qubole.net:4000/artifactory/libs-release-local</url>
+      </repository>
+      <repository>
+          <id>qubole-snapshots</id>
+          <name>Qubole Snapshots</name>
+          <url>http://karma.qubole.net:4000/artifactory/libs-snapshot-local</url>
+      </repository>
+
   </repositories>
 
   <!-- this is needed for maven-thrift-plugin, would like to remove this.
@@ -83,7 +107,7 @@
     <jackson.version>1.9.11</jackson.version>
     <jackson.package>org.codehaus.jackson</jackson.package>
     <shade.prefix>parquet</shade.prefix>
-    <hadoop.version>1.1.0</hadoop.version>
+    <hadoop.version>0.20.1-qubole-0.1.0</hadoop.version>
     <cascading.version>2.5.3</cascading.version>
     <parquet.format.version>2.1.0</parquet.format.version>
     <log4j.version>1.2.17</log4j.version>
@@ -92,24 +116,24 @@
   </properties>
 
   <modules>
-    <module>parquet-avro</module>
-    <module>parquet-cascading</module>
+    <!-- <module>parquet-avro</module> 
+    <module>parquet-cascading</module> -->
     <module>parquet-column</module>
     <module>parquet-common</module>
     <module>parquet-encoding</module>
     <module>parquet-generator</module>
     <module>parquet-hadoop</module>
     <module>parquet-jackson</module>
-    <module>parquet-pig</module>
-    <module>parquet-pig-bundle</module>
-    <module>parquet-protobuf</module>
-    <module>parquet-scrooge</module>
+    <!-- <module>parquet-pig</module>
+    <module>parquet-pig-bundle</module> -->
+    <!-- <module>parquet-protobuf</module> -->
+    <!-- <module>parquet-scrooge</module>
     <module>parquet-thrift</module>
-    <module>parquet-test-hadoop2</module>
+    <module>parquet-test-hadoop2</module> -->
     <module>parquet-hadoop-bundle</module>
     <module>parquet-hive</module>
     <module>parquet-hive-bundle</module>
-    <module>parquet-tools</module>
+    <!-- <module>parquet-tools</module> -->
   </modules>
 
   <dependencies>
