--- a/parquet-hadoop/pom.xml
+++ b/parquet-hadoop/pom.xml
@@ -30,7 +30,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-client</artifactId>
+      <artifactId>hadoop-core</artifactId>
       <version>${hadoop.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -63,6 +63,17 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-snappy</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+      <dependency>
+          <groupId>com.hadoop.gplcompression</groupId>
+          <artifactId>hadoop-lzo</artifactId>
+          <version>0.4.19</version>
+      </dependency>
+
   </dependencies>
 
   <build>
