--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,30 @@
         <enabled>true</enabled>
       </snapshots>
      </repository>
+     <repository>
+       <id>qubole-http-release</id>
+       <name>Qubole HTTP Release Repository</name>
+       <url>http://maven-qubole.s3-website-us-east-1.amazonaws.com/maven/release</url>
+     </repository>
+     <repository>
+       <id>qubole-http-snapshot</id>
+       <name>Qubole HTTP Snapshot Repository</name>
+       <url>http://maven-qubole.s3-website-us-east-1.amazonaws.com/maven/snapshot</url>
+       <snapshots>
+         <enabled>true</enabled>
+       </snapshots>
+     </repository>
+      <repository>
+          <id>qubole-releases</id>
+          <name>Qubole Releases</name>
+          <url>http://karma.qubole.net:4000/artifactory/libs-release-local</url>
+      </repository>
+      <repository>
+          <id>qubole-snapshots</id>
+          <name>Qubole Snapshots</name>
+          <url>http://karma.qubole.net:4000/artifactory/libs-snapshot-local</url>
+      </repository>
+
   </repositories>
 
   <!-- this is needed for maven-thrift-plugin, would like to remove this.
@@ -80,7 +104,7 @@
     <github.global.server>github</github.global.server>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
     <jackson.version>1.9.11</jackson.version>
-    <hadoop.version>1.1.0</hadoop.version>
+    <hadoop.version>0.20.1-qubole-0.1.0</hadoop.version>
     <parquet.format.version>1.0.0</parquet.format.version>
     <log4j.version>1.2.17</log4j.version>
   </properties>
