--- a/parquet-protobuf/pom.xml
+++ b/parquet-protobuf/pom.xml
@@ -58,6 +58,11 @@
       <version>${hadoop.version}</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>com.hadoop.gplcompression</groupId>
+        <artifactId>hadoop-lzo</artifactId>
+        <version>0.4.19</version>
+    </dependency>
   </dependencies>
 
   <developers>
